# Moterlode

./: Cargo.toml  README.md  docker-compose.yml  dockerfile
migrations/2024-01-25-232348_create_categoria/: up.sql
migrations/2024-01-25-232349_create_usuario/: down.sql  up.sql
migrations/2024-01-25-232350_create_conta/: down.sql  up.sql
migrations/2024-01-25-232356_create_ganho/: down.sql  up.sql
migrations/2024-01-25-232401_create_gasto/: down.sql  up.sql
migrations/2024-01-25-232408_create_investimento/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
