[package]
name = "moterlode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
diesel = "2.1.4"
diesel-async = "0.4.1"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
uuid = "1.6.1"
